[package]
name = "nexus_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.5", features = ["native-activity"] }
ndk-context = "0.1"

[package.metadata.android]
package = "com.nexus.nativeapp"
label = "NEXUS Native"
assets = "assets"

